Remove native package